fix background clipping on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  background-color: var(--clr-primary-400);
   min-height: 100vh;
   display: flex;
   justify-content: center;
